@@ -12,11 +12,8 @@ COPY src ./src
 
 RUN ./mvnw clean package -Dmaven.test.skip=true
 
-FROM eclipse-temurin:21-jdk-alpine
-
+FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
-
 COPY --from=builder /app/target/*.jar app.jar
-
 EXPOSE 8080
-ENTRYPOINT ["java", "--enable-native-access=ALL-UNNAMED", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
